@@ -1,6 +1,8 @@
 * Fri Sep 11 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.1-0
 - Add controls, identifiers, and oval-ids
 - Work around rspec failure
+- Apply confinement before merging values
+- Ignore undefined ces when correlating checks and profiles
 
 * Mon Jun 22 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.0-0
 - Deep merge hash values in the Hiera backend
